<resources>

    <string name="app_name">Wso2.Telco.Playground</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="production">Production</string>
    <string name="preprod">Pre Prod</string>
    <string name="sandbox">Sandbox</string>
    <string name="unregister">Unregister Service</string>
    <string name="textname">Wso2.Telco Playground</string>

    <string-array name="scope_array">
        <item>openid</item>
        <item>openid+profile</item>
        <item>openid+phone</item>
        <item>openid+mc_identity_phonenumber_hashed</item>
        <item>openid+profile+mc_identity_phonenumber_hashed</item>
        <item>mnv</item>
        <item>mc_mnv_validate</item>
        <item>mc_mnv_validate_plus</item>
        <item>mc_india_tc</item>
    </string-array>

</resources>
